# weread

./: .gitignore  README.md  requirements.txt
pageturner/: .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
pageturner/api/: schema_data.py  serializers.py  urls.py  views.py
pageturner/members/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
pageturner/members/migrations/: 0001_initial.py  0002_alter_snippet_user.py  0002_profile_date_modified.py  0003_profile_books_liked.py  0003_snippet.py  0004_emailsubscription.py  0004_profile_profile_image.py  0005_snippet_likes.py  0006_sharedsnippet.py  0007_profile_facebook_link_profile_homepage_link_and_more.py  0008_profile_books_bookmarked_profile_books_read.py  0009_comment.py
pageturner/members/static/: script.js
pageturner/members/templates/authenticate/: login.html  register_user.html
pageturner/members/templates/profiles/: profile.html  profile_list.html  update_user.html
pageturner/members/templates/snippets/: comment_snippet.html  edit_comment.html  edit_snippet.html  show_snippet.html
pageturner/pageturner/: asgi.py  settings.py  urls.py  wsgi.py
pageturner/reviews/: admin.py  filters.py  forms.py  models.py  urls.py  utils.py  views.py
pageturner/reviews/migrations/: 0001_initial.py  0002_alter_book_summary.py  0002_rename_contributor_author_remove_book_contributors_and_more.py  0003_alter_book_title.py  0003_rename_first_names_author_first_name_and_more.py  0004_remove_author_email_remove_publisher_email_and_more.py  0004_tagcolor.py  0005_delete_tagcolor.py  0005_remove_author_first_name_remove_author_last_name_and_more.py  0006_alter_book_url.py  0006_book_main_genre.py  0007_bookimport.py  0007_booklist_rename_tags_book_genres_book_age_and_more.py  0008_alter_book_rating.py  0008_remove_booklist_book_titles_booklist_books.py  0009_booklist_list_cover.py  0009_customuser.py  0010_delete_customuser.py  0010_rename_booklist_bookslist.py  0011_book_cover_book_summary.py  0011_rename_bookslist_bookcollection.py  0012_book_main_age.py  0012_rename_rating_book_rating_small.py  0013_book_genres.py  0013_book_likes.py  0014_alter_book_cover.py  0014_remove_book_likes.py  0015_book_likes.py  0015_book_rating_alter_book_rating_small.py  0016_alter_book_likes.py  0016_alter_book_rating_alter_book_rating_small.py  0017_alter_book_rating_alter_book_rating_small.py  0017_remove_book_likes.py  0018_alter_book_rating_alter_book_rating_small.py  0018_book_country_book_secondary_genre.py  0019_alter_book_rating.py  0019_book_part_of_series.py  0020_authorimport_remove_book_best_books_of_2023.py  0020_remove_book_rating.py  0021_rename_cover_book_cover_url.py  (+9 more)
pageturner/reviews/static/: script_reload.js
pageturner/reviews/templates/reviews/: base.html  book_collections.html  book_detail.html  book_genres_list.html  book_list.html  comment_review.html  create_review.html  genres_list.html  search_results.html  show_lucky_book.html
pageturner/reviews/templatetags/: custom_filters.py
pageturner/static/: main.css
pageturner/staticfiles/: main.css  script.js  star-rating.js
pageturner/templates/: base.html
pageturner/templates/admin/: csv_form.html
