[tool.poetry]
name = "pageturner"
version = "0.1.0"
description = ""
authors = ["Anastasia Vakhrusheva <aaselezneva9@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.8.1"
attrs = "23.2.0"
automat = "22.10.0"
black = "24.4.2"
boringavatars = "1.0.3"
certifi = "2024.6.2"
cffi = "1.16.0"
cfgv = "3.4.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
constantly = "23.10.4"
crispy-bootstrap5 = "2024.2"
cryptography = "42.0.8"
cssselect = "1.2.0"
defusedxml = "0.7.1"
diff-match-patch = "20230430"
distlib = "0.3.8"
dj-database-url = "2.2.0"
dj-rest-auth = "6.0.0"
django = "5.0.6"
django-allauth = "0.63.3"
django-cors-headers = "4.4.0"
django-crispy-forms = "2.2"
django-extensions = "3.2.3"
django-filter = "24.2"
django-formtools = "2.5.1"
django-import-export = "4.1.0"
django-widget-tweaks = "1.5.0"
djangorestframework = "3.15.2"
drf-spectacular = "0.27.2"
environs = "11.0.0"
et-xmlfile = "1.1.0"
filelock = "3.15.4"
flake8 = "7.1.0"
gunicorn = "22.0.0"
h11 = "0.14.0"
hyperlink = "21.0.0"
identify = "2.5.36"
idna = "3.7"
incremental = "22.10.0"
inflection = "0.5.1"
itemadapter = "0.9.0"
itemloaders = "1.3.1"
jinja2 = "3.1.4"
jmespath = "1.0.1"
jsonschema = "4.22.0"
jsonschema-specifications = "2023.12.1"
lxml = "5.2.2"
markuppy = "1.14"
markupsafe = "2.1.5"
marshmallow = "3.21.3"
mccabe = "0.7.0"
mypy-extensions = "1.0.0"
nodeenv = "1.9.1"
oauthlib = "3.2.2"
odfpy = "1.4.1"
openpyxl = "3.1.5"
outcome = "1.3.0.post0"
packaging = "24.1"
pandas = "2.2.2"
parsel = "1.9.1"
pathspec = "0.12.1"
pillow = "10.4.0"
platformdirs = "4.2.2"
plotly = "5.22.0"
pre-commit = "3.7.1"
protego = "0.3.1"
psycopg2-binary = "2.9.9"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pycodestyle = "2.12.0"
pycparser = "2.22"
pydispatcher = "2.0.7"
pyflakes = "3.2.0"
pyjwt = "2.8.0"
pyopenssl = "24.1.0"
pysocks = "1.7.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python3-openid = "3.2.0"
pytz = "2024.1"
pyyaml = "6.0.1"
queuelib = "1.7.0"
referencing = "0.35.1"
requests = "2.32.3"
requests-file = "2.1.0"
requests-oauthlib = "2.0.0"
rpds-py = "0.18.1"
service-identity = "24.1.0"
setuptools = "70.2.0"
six = "1.16.0"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
sqlparse = "0.5.0"
tablib = "3.5.0"
tenacity = "8.4.2"
tldextract = "5.1.2"
trio = "0.25.1"
trio-websocket = "0.11.1"
twisted = "24.3.0"
typing-extensions = "4.12.2"
tzdata = "2024.1"
uritemplate = "4.1.1"
urllib3 = "2.2.2"
virtualenv = "20.26.2"
w3lib = "2.2.1"
wsproto = "1.2.0"
xlrd = "2.0.1"
xlwt = "1.3.0"
zope-interface = "6.4.post2"
numpy = "2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
