[tool.poetry]
name = "pageturner"
version = "0.1.0"
description = ""
authors = ["Anastasia Vakhrusheva <aaselezneva9@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^23.2.0"
black = "^24.4.2"
boringavatars = "^1.0.3"
dj-database-url = "2.2.0"
dj-rest-auth = "6.0.0"
django = "5.0.6"
django-allauth = "0.63.3"
django-cors-headers = "4.4.0"
django-crispy-forms = "2.2"
django-extensions = "3.2.3"
django-filter = "24.2"
django-formtools = "2.5.1"
django-import-export = "4.1.0"
django-widget-tweaks = "1.5.0"
djangorestframework = "3.15.2"
drf-spectacular = "0.27.2"
environs = "11.0.0"
flake8 = "7.1.0"
gunicorn = "22.0.0"
jinja2 = "3.1.4"
markupsafe = "2.1.5"
marshmallow = "3.21.3"
oauthlib = "3.2.2"
pillow = "10.4.0"
psycopg2-binary = "2.9.9"
pycodestyle = "2.12.0"
pyjwt = "2.8.0"
python-dotenv = "1.0.1"
requests = "2.32.3"
requests-oauthlib = "2.0.0"
rpds-py = "0.18.1"
service-identity = "24.1.0"
setuptools = "70.2.0"
sqlparse = "0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
